# uefi-input2

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
examples/: test_ctrl_notification.rs  test_enable_realtime.rs  test_input.rs  test_input_hotplug.rs  test_input_notification.rs  test_input_notify.rs  test_input_state.rs  test_multi_input.rs  test_polling_hotplug.rs  test_state_machine.rs
src/: config.rs  hotplug.rs  input.rs  key_data.rs  lib.rs  simple_text_input_ex.rs  state_machine.rs  state_machine_fallback.rs
