[package]
name = "uefi-input2"
authors = ["Bemly"]
categories = ["embedded", "no-std", "api-bindings"]
keywords = ["uefi", "efi"]
version = "1.0.0"
edition = "2024"
license = "GPL-3"
rust-version = "1.85.1"

[dependencies]
uefi = "0.36.1"
uefi-raw = "0.13.0"

[dev-dependencies]
uefi = { version = "0.36.1", features = ["logger", "alloc", "global_allocator", "panic_handler"] }