[package]
name = "uefi-input2"
authors = ["Bemly <bemly_@petalmail.com>"]
categories = ["embedded", "no-std", "api-bindings"]
keywords = ["uefi", "efi"]
version = "36.1.1"
edition = "2024"
license = "GPL-3"
rust-version = "1.85.1"
readme = "README.md"
repository = "https://github.com/Bemly/uefi-input2"
description = "rusty wrapper for EFI SIMPLE TEXT INPUT EXTEND PROTOCOL, support shift&toggle state and advanced key events."

[dependencies]
uefi = "0.36.1"
uefi-raw = "0.13.0"

[dev-dependencies]
uefi = { version = "0.36.1", features = ["logger", "alloc", "global_allocator", "panic_handler"] }