[package]
name = "uefi-input2"
authors = ["Bemly <bemly_@petalmail.com>"]
categories = ["embedded", "no-std", "api-bindings"]
keywords = ["uefi", "efi"]
version = "36.1.4"
edition = "2024"
license = "Zed"
readme = "README.md"
repository = "https://github.com/Bemly/uefi-input2"
description = "rusty wrapper for EFI SIMPLE TEXT INPUT EXTEND PROTOCOL, support shift&toggle state and advanced key events."

[dependencies]
uefi = "0.36.1"
uefi-raw = "0.13.0"

[dev-dependencies]
uefi = { version = "0.36.1", features = ["logger", "alloc", "global_allocator", "panic_handler"] }

[package.metadata.docs.rs]
default-target = "x86_64-unknown-uefi"
targets = ["aarch64-unknown-uefi", "i686-unknown-uefi", "x86_64-unknown-uefi"]